fix(arc-663): allow overflowing effects

--- a/src/modules/reading-room/components/FilterMenu/FilterForm/FilterForm.module.scss
+++ b/src/modules/reading-room/components/FilterMenu/FilterForm/FilterForm.module.scss
@@ -29,6 +29,10 @@
 	max-height: 100%;
 	overflow: auto;
 
+	// Allow "overflowing" effects on input fields
+	padding-top: $spacer-xxs;
+	margin-top: -$spacer-xxs;
+
 	@include respond-to(md) {
 		flex-grow: 1;
 	}
